--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,13 @@
 .App {
-  font-size: 100px;
+  font-size: 30px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-style: italic;
+}
+
+button {
+  margin-left:10px;
+}
+
+input {
+  margin-left:10px;
 }
