--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,4 @@
 .App {
-  font-size: 30px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-style: italic;
-}
-
-button {
-  margin-left:10px;
-}
-
-input {
-  margin-left:10px;
+  display:flex;
+  flex-direction: column;
 }
