--- a/client/src/components/Pokemons/Pokemons.css
+++ b/client/src/components/Pokemons/Pokemons.css
@@ -9,8 +9,8 @@
 }
 
 .inner_div {
-    width:300px;
-    height:300px;
+    width:200px;
+    height:200px;
     border: 1px solid rgb(234, 230, 230);
     border-radius:10px;
     margin:0.8%;
@@ -19,6 +19,8 @@
     font-size: 20px;
     display:flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .inner_div:hover {
@@ -31,18 +33,28 @@
     font-family:30px;
     font-weight: 100;
     margin:10px;
+    background-color: gray;
+    color:white;
+    padding-left:10px;
+    padding-right:10px;
+    padding-top: 5px;
+    padding-bottom:5px;
+    border-radius: 4px;
+    box-shadow: 2px 2px 3px gainsboro;
 }
 
 .pokemon_title_answer {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-family:30px;
-    font-weight: 100;
+    font-weight: 400;
     margin:10px;
+    font-size: 15px;
+    text-transform: uppercase;
 }
 
 .details_link {
     text-decoration: none;
-    background-color: rgb(40, 40, 190);
+    background-color: rgb(83, 83, 195);
     color:white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding:10px;
