--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -3,11 +3,12 @@
     background-color: rgb(129, 129, 248);
     display: flex;
     box-shadow:2px 2px 2px gainsboro;
+    flex-direction: row;
+    align-items: center;
 }
 
 .nav_title {
     color:white;
     font-size:3rem;
-    margin-left:1rem;
     letter-spacing: 0.25rem;
 }
